fix(notifications): move catch-all `dismiss_notification` endpoint in router to after the unreachable delete endpoint
